--- a/SazhnevDjango/SazhnevProject/sazhnevapp/templates/sazhnevapp/catalog.html
+++ b/SazhnevDjango/SazhnevProject/sazhnevapp/templates/sazhnevapp/catalog.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Каталог товаров</title>
-</head>
-<body>
-    <h1>Каталог товаров!</h1>
+{% extends 'base.html' %}
+
+{% block content %}
+    <h2>Каталог товаров!</h2>
     {{ table | safe }}
-</body>
-</html>
+{% endblock %}
