--- a/SazhnevDjango/SazhnevProject/templates/base.html
+++ b/SazhnevDjango/SazhnevProject/templates/base.html
@@ -12,6 +12,7 @@
             <li><a href="/catalog/">Каталог</a></li>
             <li><a href="/about_me/">О нас</a></li>
             <li><a href="/orders/">Проверить ваши заказы по id клиента</a></li>
+            <li><a href="/edit_product/">Изменить товар по id продукта</a></li>
         </ul>
     </nav>
 </header>
