--- a/SazhnevDjango/SazhnevProject/templates/base.html
+++ b/SazhnevDjango/SazhnevProject/templates/base.html
@@ -13,6 +13,7 @@
             <li><a href="/about_me/">О нас</a></li>
             <li><a href="/orders/">Проверить ваши заказы по id клиента</a></li>
             <li><a href="/edit_product/">Изменить товар по id продукта</a></li>
+            <li><a href="/admin/">Административная панель</a></li>
         </ul>
     </nav>
 </header>
